---
source: tests/integration/conformance.rs
expression: "format_output_snapshot(case.text, &annotated)"
---
case --- 
[]
stdout --- 
<empty>
stderr --- 
error: unexpected character `\f`. expected start of a json value
 --> stdin:1:2
  |
1 | [␌]
  |  ^
